etapa2/entregas/e2g03/gramatica.txt
Grammar

S' -> inicio
inicio -> PROGRAM instruccion
instruccion -> asignacion
instruccion -> if
instruccion -> scan
instruccion -> print
instruccion -> for
instruccion -> repeat
instruccion -> bloque
instruccion -> empty
asignacion -> ID EQUALS expresion
if -> IF expresion instruccion else
else -> empty
else -> ELSE instruccion
else -> ELSE bloque SEMICOLON
scan -> SCAN ID
print -> PRINT lista
print -> PRINTLN lista
lista -> expresion
lista -> STRING
lista -> lista COMMA expresion
lista -> lista COMMA STRING
orden -> MIN
orden -> MAX
for -> FOR ID orden expresion DO instruccion
repeat -> REPEAT instruccion WHILE expresion
repeat -> REPEAT instruccion WHILE expresion DO instruccion
repeat -> WHILE expresion DO instruccion
bloque -> OPENCURLY listainstruc CLOSECURLY
bloque -> OPENCURLY USING listad SEMICOLON IN listainstruc CLOSECURLY
listad -> tipo listacoma
listad -> listad SEMICOLON tipo listacoma
listacoma -> ID
listacoma -> listacoma COMMA ID
tipo -> INT
tipo -> SET
tipo -> BOOL
listainstruc -> instruccion
listainstruc -> listainstruc SEMICOLON instruccion
empty -> <empty>
expresion -> NUMBER
expresion -> TRUE
expresion -> FALSE
expresion -> ID
expresion -> OPENPAREN expresion CLOSEPAREN
expresion -> expresion PLUS expresion
expresion -> expresion MINUS expresion
expresion -> expresion TIMES expresion
expresion -> expresion DIVIDE expresion
expresion -> expresion MOD expresion
expresion -> MINUS expresion
expresion -> NOT expresion
expresion -> MAXSET expresion
expresion -> MINSET expresion
expresion -> NSET expresion
expresion -> set
expresion -> expresion INTERSECTION expresion
expresion -> expresion DIF expresion
expresion -> expresion UNION expresion
expresion -> expresion PLUSSET expresion
expresion -> expresion MINUSSET expresion
expresion -> expresion TIMESSET expresion
expresion -> expresion DIVIDESET expresion
expresion -> expresion MODSET expresion
expresion -> expresion COMPARE expresion
expresion -> expresion AT expresion
expresion -> expresion AND expresion
expresion -> expresion OR expresion
expresion -> expresion NOT expresion
expresion -> expresion LESSEQUALS expresion
expresion -> expresion GREATEREQUALS expresion
expresion -> expresion NOTEQUALS expresion
expresion -> expresion LESS expresion
expresion -> expresion GREATER expresion
set -> OPENCURLY numeros CLOSECURLY
numeros -> expresion sig
sig -> COMMA expresion sig
sig -> empty
